// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Characters Test Suite renders correctly without any data 1`] = `
<section
  className="undefined flex wrap"
>
  <Pagination
    contentLength={0}
    currentPage={1}
    limit={20}
    onChange={[Function]}
  />
</section>
`;

exports[`Characters Test Suite renders correctly without any data 2`] = `
<section
  className="undefined flex wrap"
>
  <Card
    dataObj={
      Object {
        "GENDER": "Male",
        "LOCATION": "Earth (Replacement Dimension)",
        "ORIGIN": "Earth (C-137)",
        "SPECIES": "Human",
        "STATUS": "Alive",
      }
    }
    heading="Rick Sanchez"
    imgSrc="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
    key="1"
  />
  <Pagination
    contentLength={1}
    currentPage={1}
    limit={20}
    onChange={[Function]}
  />
</section>
`;
